Reafactor apis Registration and Login

--- a/pom.xml
+++ b/pom.xml
@@ -153,7 +153,7 @@
 				<version>${liquibase.version}</version>
 				<configuration>
 					<changeLogFile>${basedir}src/main/resources/liquibase/${liquibase.changeLogFile}</changeLogFile>
-					<diffChangeLogFile>${basedir}/src/main/resources/liquibase/${maven.build.timestamp}_diff.xml</diffChangeLogFile>
+					<diffChangeLogFile>${basedir}/src/main/resources/liquibase/${maven.build.timestamp}_changelog.xml</diffChangeLogFile>
 					<outputChangeLogFile>${basedir}/src/main/resources/liquibase/${maven.build.timestamp}_generate.xml</outputChangeLogFile>
 					<driver>com.mysql.cj.jdbc.Driver</driver>
 					<url>jdbc:mysql://localhost:3306/db_mobile_midterm?useSSL=false&amp;allowPublicKeyRetrieval=true&amp;serverTimezone=UTC</url>
